--- a/main.html
+++ b/main.html
@@ -11,12 +11,13 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div>
-	<img src="https://wallpapers.com/images/hd/love-nature-red-heart-tree-bgapx6bft53nc8ew.jpg" alt="flower" width="250" height="200">
-	<h1>Pricing Card</h1>
-	<p>Price: Rs.200</p>
-	<p>Description: Lorem<br> ipsum dolar sim amet,<br> consectetur adipiscing<br> elit.</p>
-	<button id="btn">Buy Now</button>
-</div>
+		<img src="https://imgs.search.brave.com/Uj3U4REpNwmB3f2j1ZsTF8jrTcVF0v31Mj6-8jtSZaM/rs:fit:632:225:1/g:ce/aHR0cHM6Ly90c2Uy/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC5O/YjZJYWxER24zeHlW/dl9DNnVVUGhBSGFG/aiZwaWQ9QXBp" alt="postCard">
+		<h1>Pricing Card</h1>
+		<p>Price: Rs.200</p>
+		<p>Description: Lorem ipsum dolor sit amet, consectetur
+		 adipiscing elit</p>
+		<button type="submit" name="Submit" id="submit">Buy Now</button>
+	</div>
 </body>
 
 </html>
