--- a/main.html
+++ b/main.html
@@ -8,16 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="card">
+		<img src="https://images.unsplash.com/photo-1571172964276-91faaa704e1f?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+		<div class="middle"><h1>Pricing Card</h1>
+		<p><b>Price: Rs.200</b></p>
+		<p><b>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</b></p>
+		<button>Buy Now</button></div>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
-	<div>
-		<img src="https://imgs.search.brave.com/Uj3U4REpNwmB3f2j1ZsTF8jrTcVF0v31Mj6-8jtSZaM/rs:fit:632:225:1/g:ce/aHR0cHM6Ly90c2Uy/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC5O/YjZJYWxER24zeHlW/dl9DNnVVUGhBSGFG/aiZwaWQ9QXBp" alt="postCard">
-		<h1>Pricing Card</h1>
-		<p>Price: Rs.200</p>
-		<p>Description: Lorem ipsum dolor sit amet, consectetur
-		 adipiscing elit</p>
-		<button type="submit" name="Submit" id="submit">Buy Now</button>
-	</div>
+
 </body>
 
 </html>
