--- a/main.html
+++ b/main.html
@@ -9,12 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="card">
-		<img src="https://images.unsplash.com/photo-1571172964276-91faaa704e1f?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-		<div class="middle"><h1>Pricing Card</h1>
-		<p><b>Price: Rs.200</b></p>
-		<p><b>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</b></p>
-		<button>Buy Now</button></div>
-		
+		<img src="http://wallpapercave.com/wp/wc1709230.jpg" class="img" alt="sauske"  >
+		<center><h1 class="h">Sasuke</h1></center>
+		<center><p class="p1">Price:$123</p></center>
+		<center><p class="p2">Description:Lorem kjhx agd hkjm sdcg hkjbdc xcvh</p></center>
+		<center><button class="btn">Buy Now</button></center>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
